local 실행 명령어 수정

--- a/examples/lambda-base/apigateway/package.json
+++ b/examples/lambda-base/apigateway/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build:dev": "NODE_ENV=dev tsx esbuild.ts && (cd .esbuild && npm install --omit=dev)",
     "build:prod": "NODE_ENV=production tsx esbuild.ts && (cd .esbuild && npm install --omit=dev)",
-    "local-run:dev": "sam local start-lambda --hook-name terraform --beta-features"
+    "local-run:dev": "sam local start-api --hook-name terraform --beta-features"
   },
   "author": "",
   "license": "Apache-2.0",
